openmm-sys/src/lib.rs

extern "C" {
    pub fn OpenMM_CustomNonbondedForce_getParticleParameters(
        target: *const OpenMM_CustomNonbondedForce,
        index: ::std::os::raw::c_int,
        parameters: *mut OpenMM_DoubleArray,
    );
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_setParticleParameters(
        target: *mut OpenMM_CustomNonbondedForce,
        index: ::std::os::raw::c_int,
        parameters: *const OpenMM_DoubleArray,
    );
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_addExclusion(
        target: *mut OpenMM_CustomNonbondedForce,
        particle1: ::std::os::raw::c_int,
        particle2: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_getExclusionParticles(
        target: *const OpenMM_CustomNonbondedForce,
        index: ::std::os::raw::c_int,
        particle1: *mut ::std::os::raw::c_int,
        particle2: *mut ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_setExclusionParticles(
        target: *mut OpenMM_CustomNonbondedForce,
        index: ::std::os::raw::c_int,
        particle1: ::std::os::raw::c_int,
        particle2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_createExclusionsFromBonds(
        target: *mut OpenMM_CustomNonbondedForce,
        bonds: *const OpenMM_BondArray,
        bondCutoff: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_addTabulatedFunction(
        target: *mut OpenMM_CustomNonbondedForce,
        name: *const ::std::os::raw::c_char,
        function: *mut OpenMM_TabulatedFunction,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_getTabulatedFunction(
        target: *mut OpenMM_CustomNonbondedForce,
        index: ::std::os::raw::c_int,
    ) -> *mut OpenMM_TabulatedFunction;
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_getTabulatedFunctionName(
        target: *const OpenMM_CustomNonbondedForce,
        index: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_addFunction(
        target: *mut OpenMM_CustomNonbondedForce,
        name: *const ::std::os::raw::c_char,
        values: *const OpenMM_DoubleArray,
        min: f64,
        max: f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_getFunctionParameters(
        target: *const OpenMM_CustomNonbondedForce,
        index: ::std::os::raw::c_int,
        name: *mut *mut ::std::os::raw::c_char,
        values: *mut OpenMM_DoubleArray,
        min: *mut f64,
        max: *mut f64,
    );
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_setFunctionParameters(
        target: *mut OpenMM_CustomNonbondedForce,
        index: ::std::os::raw::c_int,
        name: *const ::std::os::raw::c_char,
        values: *const OpenMM_DoubleArray,
        min: f64,
        max: f64,
    );
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_addInteractionGroup(
        target: *mut OpenMM_CustomNonbondedForce,
        set1: *const OpenMM_IntSet,
        set2: *const OpenMM_IntSet,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_getInteractionGroupParameters(
        target: *const OpenMM_CustomNonbondedForce,
        index: ::std::os::raw::c_int,
        set1: *mut OpenMM_IntSet,
        set2: *mut OpenMM_IntSet,
    );
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_setInteractionGroupParameters(
        target: *mut OpenMM_CustomNonbondedForce,
        index: ::std::os::raw::c_int,
        set1: *const OpenMM_IntSet,
        set2: *const OpenMM_IntSet,
    );
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_updateParametersInContext(
        target: *mut OpenMM_CustomNonbondedForce,
        context: *mut OpenMM_Context,
    );
}
extern "C" {
    pub fn OpenMM_CustomNonbondedForce_usesPeriodicBoundaryConditions(
        target: *const OpenMM_CustomNonbondedForce,
    ) -> OpenMM_Boolean;
}
extern "C" {
    pub fn OpenMM_AndersenThermostat_create(
        defaultTemperature: f64,
        defaultCollisionFrequency: f64,
    ) -> *mut OpenMM_AndersenThermostat;
}
extern "C" {
    pub fn OpenMM_AndersenThermostat_destroy(target: *mut OpenMM_AndersenThermostat);
}
extern "C" {
    pub fn OpenMM_AndersenThermostat_Temperature() -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_AndersenThermostat_CollisionFrequency() -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_AndersenThermostat_getDefaultTemperature(
        target: *const OpenMM_AndersenThermostat,
    ) -> f64;
}
extern "C" {
    pub fn OpenMM_AndersenThermostat_setDefaultTemperature(
        target: *mut OpenMM_AndersenThermostat,
        temperature: f64,
    );
}
extern "C" {
    pub fn OpenMM_AndersenThermostat_getDefaultCollisionFrequency(
        target: *const OpenMM_AndersenThermostat,
    ) -> f64;
}
extern "C" {
    pub fn OpenMM_AndersenThermostat_setDefaultCollisionFrequency(
        target: *mut OpenMM_AndersenThermostat,
        frequency: f64,
    );
}
extern "C" {
    pub fn OpenMM_AndersenThermostat_getRandomNumberSeed(
        target: *const OpenMM_AndersenThermostat,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_AndersenThermostat_setRandomNumberSeed(
        target: *mut OpenMM_AndersenThermostat,
        seed: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn OpenMM_AndersenThermostat_usesPeriodicBoundaryConditions(
        target: *const OpenMM_AndersenThermostat,
    ) -> OpenMM_Boolean;
}
extern "C" {
    pub fn OpenMM_VirtualSite_destroy(target: *mut OpenMM_VirtualSite);
}
extern "C" {
    pub fn OpenMM_VirtualSite_getNumParticles(
        target: *const OpenMM_VirtualSite,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_VirtualSite_getParticle(
        target: *const OpenMM_VirtualSite,
        particle: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_ThreeParticleAverageSite_create(
        particle1: ::std::os::raw::c_int,
        particle2: ::std::os::raw::c_int,
        particle3: ::std::os::raw::c_int,
        weight1: f64,
        weight2: f64,
        weight3: f64,
    ) -> *mut OpenMM_ThreeParticleAverageSite;
}
extern "C" {
    pub fn OpenMM_ThreeParticleAverageSite_destroy(target: *mut OpenMM_ThreeParticleAverageSite);
}
extern "C" {
    pub fn OpenMM_ThreeParticleAverageSite_getWeight(
        target: *const OpenMM_ThreeParticleAverageSite,
        particle: ::std::os::raw::c_int,
    ) -> f64;
}
pub const OpenMM_CustomHbondForce_NonbondedMethod_OpenMM_CustomHbondForce_NoCutoff:
    OpenMM_CustomHbondForce_NonbondedMethod = 0;
pub const OpenMM_CustomHbondForce_NonbondedMethod_OpenMM_CustomHbondForce_CutoffNonPeriodic:
    OpenMM_CustomHbondForce_NonbondedMethod = 1;
pub const OpenMM_CustomHbondForce_NonbondedMethod_OpenMM_CustomHbondForce_CutoffPeriodic:
    OpenMM_CustomHbondForce_NonbondedMethod = 2;
pub type OpenMM_CustomHbondForce_NonbondedMethod = u32;
extern "C" {
    pub fn OpenMM_CustomHbondForce_create(
        energy: *const ::std::os::raw::c_char,
    ) -> *mut OpenMM_CustomHbondForce;
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_destroy(target: *mut OpenMM_CustomHbondForce);
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_getNumDonors(
        target: *const OpenMM_CustomHbondForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_getNumAcceptors(
        target: *const OpenMM_CustomHbondForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_getNumExclusions(
        target: *const OpenMM_CustomHbondForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_getNumPerDonorParameters(
        target: *const OpenMM_CustomHbondForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_getNumPerAcceptorParameters(
        target: *const OpenMM_CustomHbondForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_getNumGlobalParameters(
        target: *const OpenMM_CustomHbondForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_getNumTabulatedFunctions(
        target: *const OpenMM_CustomHbondForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_getNumFunctions(
        target: *const OpenMM_CustomHbondForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_getEnergyFunction(
        target: *const OpenMM_CustomHbondForce,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_setEnergyFunction(
        target: *mut OpenMM_CustomHbondForce,
        energy: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_getNonbondedMethod(
        target: *const OpenMM_CustomHbondForce,
    ) -> OpenMM_CustomHbondForce_NonbondedMethod;
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_setNonbondedMethod(
        target: *mut OpenMM_CustomHbondForce,
        method: OpenMM_CustomHbondForce_NonbondedMethod,
    );
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_getCutoffDistance(target: *const OpenMM_CustomHbondForce)
        -> f64;
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_setCutoffDistance(
        target: *mut OpenMM_CustomHbondForce,
        distance: f64,
    );
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_addPerDonorParameter(
        target: *mut OpenMM_CustomHbondForce,
        name: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_getPerDonorParameterName(
        target: *const OpenMM_CustomHbondForce,
        index: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_setPerDonorParameterName(
        target: *mut OpenMM_CustomHbondForce,
        index: ::std::os::raw::c_int,
        name: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_addPerAcceptorParameter(
        target: *mut OpenMM_CustomHbondForce,
        name: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_getPerAcceptorParameterName(
        target: *const OpenMM_CustomHbondForce,
        index: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_setPerAcceptorParameterName(
        target: *mut OpenMM_CustomHbondForce,
        index: ::std::os::raw::c_int,
        name: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_addGlobalParameter(
        target: *mut OpenMM_CustomHbondForce,
        name: *const ::std::os::raw::c_char,
        defaultValue: f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_getGlobalParameterName(
        target: *const OpenMM_CustomHbondForce,
        index: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_setGlobalParameterName(
        target: *mut OpenMM_CustomHbondForce,
        index: ::std::os::raw::c_int,
        name: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_getGlobalParameterDefaultValue(
        target: *const OpenMM_CustomHbondForce,
        index: ::std::os::raw::c_int,
    ) -> f64;
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_setGlobalParameterDefaultValue(
        target: *mut OpenMM_CustomHbondForce,
        index: ::std::os::raw::c_int,
        defaultValue: f64,
    );
}
extern "C" {
    pub fn OpenMM_CustomHbondForce_addDonor(
        target: *mut OpenMM_CustomHbondForce,
        d1: ::std::os::raw::c_int,
        d2: ::std::os::raw::c_int,
        d3: ::std::os::raw::c_int,
        parameters: *const OpenMM_DoubleArray,
    ) -> ::std::os::raw::c_int;
}
